Fixed Issue From: bbush_code

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         return true;
       }
       if (computerCards.length === 0) {
-        document.body.innerHTML = '<h1>Axilian used all their cards. You win! 🎉</h1>';
+        document.body.innerHTML = '<h1>Axilian used all their cards. You Lose!! 💀🚡🪑</h1>';
         setTimeout(() => location.reload(), 5000);
         return true;
       }
