--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Axel-One: Web Edition</title>
+  <title>Axel-One: Web Edition BETA</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
     body {
@@ -259,5 +259,6 @@
 
     setTimeout(beginGame, 5000);
   </script>
+  <p>v1.0.0 BETA</p>
 </body>
 </html>
